examples/test/testpolicy17573.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17573
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key48: value48
      key47: value27
      key21: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value27
          key5: value4
      podSelector:
        matchLabels:
          key24: value6
          key13: value41
